# scipp-sasview

./: LICENSE  README.md  enviroment.yml  environment.yml  pyproject.toml  sans2d_to_I_of_Q.py  sasmodels_fit.py  setup.cfg
.buildconfig/: environment.yml
.github/workflow/: nightly.yml
.github/workflows/: nightly.yml
tests/: test_sasmodels_fit.py
