[metadata]
name = scipp-sasview
author = dmsc-nightly contributors (https://github.com/dmsc-nightly)
description = Testing Scipp-Sasview interface
license = BSD
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[flake8]
# See https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#line-length
max-line-length = 88
extend-ignore = E203

[yapf]
based_on_style = pep8
column_limit = 88
